Home page (component) redesign

--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,15 @@
 
 .home {
   padding: 40px;
+  height: 635px;
+  position: relative;
   display: flex;
   flex-direction: row;
+  background-image: url("https://i.ibb.co/GF5hm66/Screenshot-2024-04-16-at-6-13-58-PM-3.png");
+  background-repeat: no-repeat;
+  background-size: 1600px 750px;
 }
+
 
 .home-content {
   max-width: 53%;
@@ -46,8 +52,8 @@
 
 .home-img img {
   width: 400px;
-  height: auto;
-  padding-left: 120px;
+  height: 550px;
+  margin-left: 100px;
   border-radius: 25px;
 }
 
@@ -57,23 +63,28 @@
 }
 
 .home h1 {
-  color: #f1356d;
+  color: #ffffff;
   font-size: 55px;
 }
 
 .home h2 {
-  font-size: 40px;
+  color: #ffffff;
+  font-size: 30px;
 }
 
 .home-content a {
-  background: #f1356d;
+  background: rgba(255, 122, 89, .0);
   font-size: 25px;
   color: #ffffff;
   margin-right: 20px;
   margin-top: 20px;
   padding: 10px;
-  border-width: 0;
+  border: 2px solid #ffffff;
   text-decoration: none;
+}
+
+.home-content a:hover {
+  background: rgba(241, 53, 109, .9);
 }
 
 .register h1 {
