--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
     align-items: center;
     margin: 0 auto;
     border-bottom: 1px solid #f2f2f2;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: relative;
+    z-index: 1;
 }
 
 .navbar h1 {
@@ -27,6 +30,7 @@
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
+  color: #ffffff;
 }
 
 .navbar a:hover {
@@ -35,19 +39,19 @@
 
 .home {
   padding: 40px;
-  height: 635px;
+  height: 620px;
   position: relative;
   display: flex;
   flex-direction: row;
-  background-image: url("/public/home-image.png"); 
-  background-repeat: no-repeat;
-  background-size: 1600px 750px;
 }
 
 
 .home-content {
   max-width: 53%;
   margin-left: 35px;
+  text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.75);
+  z-index: 1;
+
 }
 
 .home-img img {
@@ -86,6 +90,14 @@
 
 .home-content a:hover {
   background: rgba(241, 53, 109, .9);
+}
+
+.panorama {
+  z-index: 0;
+  position: absolute;
+  width: 300px;
+  height: 300px;
+
 }
 
 .register h1 {
